TestSuite/errors/err0255.pas
type
  t1 = class 
    
    constructor := exit;
    
    procedure p1(a: array of set of record end) := exit;
    
  end;

begin end.